Add generated documentation
This updates the API handler to decentralize registry. Now each module can register its own routes at init() time.

This adds a Github Action to generate openapi.yaml based on the registered routes.
